<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ImageCropperFullscreenActivity="http://schemas.android.com/apk/res-auto" >


    <item
        android:id="@+id/cropper_rotate_cw"
        android:orderInCategory="300"
        android:title="@string/rotate_cw"
        android:icon="@mipmap/rotate_right_blue"
        ImageCropperFullscreenActivity:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/cropper_rotate_ccw"
        android:orderInCategory="350"
        android:title="@string/rotate_ccw"
        android:icon="@mipmap/rotate_left_blue"
        ImageCropperFullscreenActivity:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/cropper_fixedAspectRatio"
        android:title="@string/fixed_aspect_ratio"
        android:orderInCategory="400"

        ImageCropperFullscreenActivity:showAsAction="ifRoom|withText"/>

    <item
        android:title="@string/set_guidelines"
        android:id="@+id/cropper_guidelines"
        android:orderInCategory="500"

        ImageCropperFullscreenActivity:showAsAction="ifRoom|withText"/>


</menu>