<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <mymineralcollection.example.org.mymineral.NOT_USED.REF.AddMineralActivityFragments_notUsed.Views.ToggleButtonGroup
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/mineralExtra_ToggleButtonGroupTableLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/matrix_rad"
                    android:text="@string/txt_on_matrix"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_dynamic"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_weight="1" />
                <FrameLayout
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#000000" />
                <TextView
                    android:id="@+id/var_rad"
                    android:text="@string/txt_var"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_dynamic"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_weight="1" />
                <FrameLayout
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#000000" />
                <TextView
                    android:id="@+id/cluster_rad"
                    android:text="Cluster"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_dynamic"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_weight="1" />
                <FrameLayout
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#000000" />
                <TextView
                    android:id="@+id/with_rad"
                    android:text="@string/txt_with"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_dynamic"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_weight="1" />
                <FrameLayout
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#000000" />
                <TextView
                    android:id="@+id/on_rad"
                    android:text="@string/txt_on"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_dynamic"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_weight="1" />
                <FrameLayout
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#000000" />
                <TextView
                    android:id="@+id/and_rad"
                    android:text="@string/txt_and"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_dynamic"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_weight="1" />
            </LinearLayout>


        </mymineralcollection.example.org.mymineral.NOT_USED.REF.AddMineralActivityFragments_notUsed.Views.ToggleButtonGroup>


    </LinearLayout>

</LinearLayout>