<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingLeft="10dp"
    android:background="@android:color/transparent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:background="@color/dk_black_overlay"
            android:id="@+id/main_linearLayout">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/crop_control_linearLayout">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/ActionBarColor" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_another_img"
                    android:id="@+id/choose_button" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/linearLayout3"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="2dp" >

                    <Switch
                        style="@style/ImageCropper.Borderless.Switch.ColoredText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/keep_prev_switch"
                        android:checked="true"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/keep_prev_img"
                        android:id="@+id/textView17"
                        android:paddingRight="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/edit_linearLayout">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/ActionBarColor" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:layout_marginBottom="2dp"
                            android:id="@+id/cropper_rotate_ccw_linearLayout">

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:id="@+id/rotate_left_imageView"
                                android:layout_row="1"
                                android:layout_column="0"
                                android:src="@mipmap/rotate_left_blue"
                                android:layout_gravity="center"
                                android:layout_marginRight="15dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp" />

                            <Button
                                style="@style/ImageCropper.Borderless.Button.ColoredText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/rotate_ccw"
                                android:id="@+id/ccw_button" />

                        </LinearLayout>

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="2dp"
                            android:layout_marginBottom="2dp"
                            android:id="@+id/cropper_rotate_cw_linearLayout">

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:id="@+id/rotate_right_imageView"
                                android:layout_row="1"
                                android:layout_column="0"
                                android:src="@mipmap/rotate_right_blue"
                                android:layout_gravity="center"
                                android:layout_marginRight="15dp"
                                android:layout_marginTop="5dp"
                                android:layout_marginBottom="5dp" />

                            <Button
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/rotate_cw"
                                android:id="@+id/cw_button"
                                style="@style/ImageCropper.Borderless.Button.ColoredText" />

                        </LinearLayout>
                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/ActionBarColor" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/cropper_fixedAspectRatio_linearLayout"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="2dp">

                        <Switch
                            style="@style/ImageCropper.Borderless.Switch.ColoredText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/fixedAspectRatio_switch"
                            android:checked="false"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/fixed_aspect_ratio"
                            android:id="@+id/textView14"
                            android:paddingRight="10dp" />

                    </LinearLayout>

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/ActionBarColor" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/cropper_guidelines_linearLayout"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/set_guidelines"
                            android:id="@+id/guidelines_title_textView"
                            android:layout_row="5"
                            android:layout_column="1"
                            android:gravity="center_vertical|center_horizontal" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:text="@string/set_guidelines_ON"
                                android:id="@+id/guidelines_on_textView"
                                android:layout_alignParentTop="true"
                                android:layout_alignParentStart="true" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:text="@string/set_guidelines_OFF"
                                android:id="@+id/guidelines_off_textView"
                                android:layout_gravity="left|center_vertical"
                                android:layout_alignParentTop="true"
                                android:layout_toEndOf="@+id/guidelines_on_textView"
                                android:layout_marginStart="15dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceMedium"
                                android:text="@string/set_guidelines_ON_TOUCH"
                                android:id="@+id/guidelines_on_touch_textView"
                                android:layout_gravity="right|center_vertical"
                                android:layout_alignParentTop="true"
                                android:layout_toEndOf="@+id/guidelines_off_textView"
                                android:layout_marginStart="15dp" />

                        </RelativeLayout>

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>