<RelativeLayout android:id="@+id/main_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".AddMineral.AddMineralList.AddMineralListActivity"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:id="@+id/fragment_container_top"
            android:background="#0e1eff" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <android.support.v4.view.ViewPager android:id="@+id/viewpager"
                android:layout_below="@+id/tab_layout" android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TEST"
                android:id="@+id/viewMineral_button"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/bottomControl_LinearLayout">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/txt_loading_data"
                    android:id="@+id/textView"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/txt_next_step"
                    android:id="@+id/textView2"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_add_picture"
                    android:id="@+id/nextStep_button"
                    android:layout_gravity="right|center_vertical"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>