<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMineral.AddMineralList.AddMineralListActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:id="@+id/fragment_container_top"
        android:background="#0e1eff" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:id="@+id/fragment_container_bottom"
        android:longClickable="true"
        android:background="#882121">

        <android.support.design.widget.TabLayout android:id="@+id/tab_layout" app:tabMode="fixed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:elevation="6dp" app:tabTextColor="#d3d3d3" app:tabSelectedTextColor="#ffffff"
            app:tabIndicatorColor="#ff00ff" android:minHeight="?attr/actionBarSize"
            android:layout_below="@+id/viewMineral_button"
            android:layout_alignParentStart="true" />

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            android:layout_below="@+id/tab_layout" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|bottom" />
    </FrameLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/bottomControl_LinearLayout">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txt_loading_data"
                android:id="@+id/textView"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/txt_next_step"
                android:id="@+id/textView2"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_add_picture"
                android:id="@+id/nextStep_button"
                android:layout_gravity="right|center_vertical"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>